--- a/index.css
+++ b/index.css
@@ -7,14 +7,14 @@
   margin: 120px auto;
   max-width: 300px;
   width: 100%;
-  background: #377f88;
+  background: #0e922f;
   padding: 25px;
   border-radius: 5px;
 }
 body {
   height: 100vh;
   width: 100%;
-  background-color: #eea0a0;
+  background-color: #2daf77;
 }
 .input-section {
   padding: 20px 0px;
